--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:sqlite:./training/store.db
+spring.datasource.url=jdbc:sqlite:../training/store.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.sql.init.mode=never
 spring.jpa.hibernate.ddl-auto=none
