feat health endpoint

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port=8080
-spring.datasource.url=jdbc:sqlite:../training/store.db
+# Para teste url tem ../
+spring.datasource.url=jdbc:sqlite:./training/store.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.sql.init.mode=never
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
 
